// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anciennete /> should call onChange with updated value 1`] = `
.c1 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  width: 5em;
}

.c0 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <section
    class="section-light"
  >
    <div
      class="container"
    >
      <div
        class="wrapper-light "
      >
        <h2>
          Quelle est votre ancienneté en mois ?
        </h2>
        <label
          class="c0"
        >
          <input
            class="c1"
            name="anciennete"
            size="5"
            type="number"
            value="12"
          />
           
          mois
        </label>
      </div>
    </div>
  </section>
  <div
    class="container "
  >
    <div
      style="display: flex; flex-direction: row; margin-top: 20px; font-size: 1rem;"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`<Anciennete /> should render 1`] = `
.c1 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  width: 5em;
}

.c0 {
  padding: 0;
  font-size: 1.5rem;
  text-align: center;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <section
    class="section-light"
  >
    <div
      class="container"
    >
      <div
        class="wrapper-light "
      >
        <h2>
          Quelle est votre ancienneté en mois ?
        </h2>
        <label
          class="c0"
        >
          <input
            class="c1"
            name="anciennete"
            size="5"
            type="number"
            value="55"
          />
           
          mois
        </label>
      </div>
    </div>
  </section>
  <div
    class="container "
  >
    <div
      style="display: flex; flex-direction: row; margin-top: 20px; font-size: 1rem;"
    >
      <div />
    </div>
  </div>
</div>
`;
